Fix weird input zoom on iphone

--- a/client/app.sass
+++ b/client/app.sass
@@ -15,10 +15,10 @@
     height: 100%
 
 .AppLayout
-    min-height: 100%
+    min-height: 100vh
 
 .AppLayout > .fullScreen
-    min-height: 100%
+    min-height: 100vh
 
 .AppHeader
     position: sticky
@@ -342,6 +342,9 @@ ul.navigation-shortcuts
         border: 0
         text-align: center
         border-radius: 0 0 8px 8px
+
+        // https://thingsthemselves.com/no-input-zoom-in-safari-on-iphone-the-pixel-perfect-way/
+        font-size: 16px
 
     // fieldset svg
     //     display: none
